# trait-lifetime-type

./: Cargo.toml  README.MD
src/: main.rs  md01.rs  md03.rs
src/trait_example/: Cargo.toml
src/trait_example_old/: Cargo.toml
src/trait_fuel_example/: Cargo.toml
src/trait_holder/: Cargo.toml
src/trait_logger/: Cargo.toml
src/trait_logger/src/: main.rs
